# django-unfold-markdown

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
src/unfold_markdown/: __init__.py  apps.py  widgets.py
